added erb for expenses by tag

--- a/views/merchants/index_merchants.erb
+++ b/views/merchants/index_merchants.erb
@@ -1,6 +1,6 @@
 <h1> Your merchants</h1>
 
-<a href="new_merchant.erb"> Add a new merchant to your list</a>
+<a href="/merchants/new_merchant"> Add a new merchant to your list</a>
 <br></br>
-<a href= "all_merchants.erb"> See all your merchants</a>
+<a href= "/merchants/all_merchants"> See all your merchants</a>
 <br></br>
