--- a/views/tags/index_tags.erb
+++ b/views/tags/index_tags.erb
@@ -1,6 +1,8 @@
-<h1> Your purchases</h1>
+<h1> Your purchase types</h1>
 
-<a href="new_tag.erb"> Add a new type of purchase to your list</a>
+<a href="/tags/new_tag"> Add a new type of purchase to your list</a>
 <br></br>
-<a href= "all_tags.erb"> See all your type of purchases</a>
+<a href= "/tags/all_tags"> See all your type of purchases</a>
+<br></br>
+<a href= "/tags/spent_by_tag"> See how much you spent for type of purchases</a>
 <br></br>
