finished the creating of new transaction

--- a/views/transactions/new_transaction.erb
+++ b/views/transactions/new_transaction.erb
@@ -2,7 +2,7 @@
 
 <br></br>
 
-<form method="post" action="/transactions/all">
+<form method="post" action="new_transaction_report">
   <label for="amount">Amount Spent </label>
   <input id="amount" type="number" name="amount"/>
 
