changed all transactions page to accomodate delete/edite methods and delete is working

--- a/views/index.erb
+++ b/views/index.erb
@@ -3,5 +3,7 @@
 <br></br>
 
 <section id="display">
-  <%= @amount_spent %>
+   <p id = "display_para"> Your total spent so far is : £<%= @amount_spent %>
+   <p id = "display_para"> You have available : £<%= @amount_left %>
+   <!-- <p id = "display_para"> Your monthly budget is : £<%= @budget %> -->
 </section>
