added crud functionality to website on tags and merchants

--- a/views/merchants/index_merchants.erb
+++ b/views/merchants/index_merchants.erb
@@ -4,3 +4,5 @@
 <br></br>
 <a href= "/merchants/all_merchants"> See all your merchants</a>
 <br></br>
+<a href= "/merchants/spent_by_merchant"> See how much you spent by merchant</a>
+<br></br>
