created emthod for monthly expenses" "

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -18,7 +18,7 @@
         <a href="/merchants"> Go to merchants</a>
       </li>
       <li>
-        <a href="/budgets/budget_edit_form"> Change budget for this month</a>
+        <a href="/"> Go to Homepage</a>
       </li>
     </ul>
   </nav>
