--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,10 @@
-<h1> Welcome to Moneydashboard!<h1>
+<h1 id="main_title"> Welcome to Handy Budget!<h1>
 
+
+  <li>
+    <a href="/budgets/budget_edit_form"> Change budget for this month</a>
+  </li>
+  
 <br></br>
 
 <section id="display">
@@ -9,7 +14,13 @@
 </section>
 
 <section id="warning">
-  <% if  @amount_left < (0.2 * @budget)%>
+  <% if  @amount_left < 0 %>
+  <p id="very_bad"> Your are over  your budget</p>
+  <p id="very_bad1"> You  should seek financial advice </p>
+  <% elsif  @amount_left < (0.2 * @budget)%>
 <p id="bad"> Your expenses are too high</p>
+<p id="bad1"> You now have less than 20% of this month budget</p>
+
+
 <% end%>
 </section>
