--- a/views/transactions/all_transactions.erb
+++ b/views/transactions/all_transactions.erb
@@ -14,7 +14,7 @@
     <li> Date of transaction: <%= transaction.date_of_transaction() %> </li>
     <li> Merchant: <%= transaction.merchant() %> </li>
     <li> Type of purchase: <%= transaction.tag() %> </li>
-    <li> budget: <%= transaction.budget_id() %> </li>
+    <!-- <li> budget: <%= transaction.budget_id() %> </li> -->
 
 <br></br>
 <form method="post" action = "/transactions/<%= transaction.id%>/delete_transaction">
