--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,21 +9,22 @@
   <nav>
     <ul>
       <li>
-        <a href="/transactions"> Go to transactions</a>
+        <a href="/"> Homepage</a>
       </li>
       <li>
-        <a href="/tags"> Go to purchases</a>
+        <a href="/transactions">Transactions</a>
       </li>
       <li>
-        <a href="/merchants"> Go to merchants</a>
+        <a href="/tags"> Purchases</a>
       </li>
       <li>
-        <a href="/"> Go to Homepage</a>
+        <a href="/merchants"> Merchants</a>
       </li>
+
     </ul>
   </nav>
 
 
- <%= yield%>
+  <%= yield%>
 </body>
 </html>
