--- a/views/tags/all_tags.erb
+++ b/views/tags/all_tags.erb
@@ -1,5 +1,5 @@
 <p class="new_bttn">
-  <a href="/tags/new_tag"> Create a new tag </a>
+  <a href="/tags/new_tag"> Create a new purchase type </a>
 </p>
 
 <br></br>
