--- a/views/transactions/index_transactions.erb
+++ b/views/transactions/index_transactions.erb
@@ -1,6 +1,8 @@
 <h1> Your transactions</h1>
 
-<a href="/transactions/new"> Add a new transaction</a>
+<a href="/transactions/new"> Add a new transaction </a>
 <br></br>
-<a href= "/transactions/all_transactions"> See all your transactions</a>
+<a href= "/transactions/all_transactions"> See all your transactions </a>
+<br></br>
+<a href= "/transactions/spendings_by_month"> See how much you've spent by month </a>
 <br></br>
