--- a/views/transactions/new_transaction_report.erb
+++ b/views/transactions/new_transaction_report.erb
@@ -1,5 +1,4 @@
 <h1> Your transaction has been created </h1>
 
-<p><a href="/transactions/all_transactions">Go to transactions</a></p>
+<p><a href="/transactions/all_transactions">All transactions</a></p>
 <br></br>
-<p><a href="/">Go to homepage</a></p>
