--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,4 @@
 <h1 id="main_title"> Welcome to Handy Budget!<h1>
-
-
   <li>
     <a id="budget" href="/budgets/budget_edit_form"> Change budget for this month</a>
   </li>
@@ -8,20 +6,19 @@
 <br></br>
 
 <section id="display">
-   <p id = "display_para"> Your total spent so far is : £<%= @transaction %>
-   <p id = "display_para"> You have available : £<%= @amount_left %>
-   <p id = "display_para"> Your monthly budget is : £<%= @budget %>
+   <p id = "display_paragraph"> Your total spent so far is : £<%= @transaction %>
+   <p id = "display_paragraph"> You have available : £<%= @amount_left %>
+   <p id = "display_paragraph"> Your monthly budget is : £<%= @budget %>
 </section>
 
 <section id="warning">
   <% if  @amount_left < 0 %>
-  <p id="very_bad"> Your are over  your budget</p>
+  <p id="warning1"> Your are over  your budget</p>
   <p id="very_bad1"> You  should seek financial advice </p>
   <p id="very_bad2"> Contact Antonio Eusebio de Abreu Goncalves for personalized loans </p>
   <% elsif  @amount_left < (0.2 * @budget)%>
 <p id="bad"> Your expenses are too high</p>
 <p id="bad1"> You now have less than 20% of this month budget</p>
 
-
-<% end%>
+<% end %>
 </section>
