css anchors, background, positive buttons

--- a/views/budgets/budget_edit_form.erb
+++ b/views/budgets/budget_edit_form.erb
@@ -14,6 +14,6 @@
 <br></br>
 
 
-        <input type="submit" value="Change budget"/>
+        <input class="bttn_positive" type="submit" value="Change budget"/>
 
 </form>
