--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,6 @@
 <h1 id="main_title"> Welcome to Handy Budget!<h1>
   <li>
-    <a id="budget" href="/budgets/budget_edit_form"> Change budget for this month</a>
+    <a id="budget_bttn" href="/budgets/budget_edit_form"> Change budget for this month</a>
   </li>
 
 <br></br>
