--- a/views/merchants/merchant_edit_form.erb
+++ b/views/merchants/merchant_edit_form.erb
@@ -8,6 +8,6 @@
 
 
 <br></br>
-        <input type="submit" value="Change merchant name"/>
+        <input class="bttn_positive" type="submit" value="Change merchant name"/>
 
 </form>
