--- a/views/merchants/new_merchant.erb
+++ b/views/merchants/new_merchant.erb
@@ -9,6 +9,6 @@
 <br></br>
 
 
-        <input type="submit" value="Create new merchant"/>
+        <input class="bttn_positive" type="submit" value="Create new merchant"/>
 
 </form>
