--- a/views/merchants/spent_by_merchant.erb
+++ b/views/merchants/spent_by_merchant.erb
@@ -12,6 +12,6 @@
     </select>
 
 
-    <input type="submit" value="Check your spendings"/>
+    <input  class="bttn_positive" type="submit" value="Check your spendings"/>
 
     </form>
