--- a/views/tags/index_tags.erb
+++ b/views/tags/index_tags.erb
@@ -1,8 +1,9 @@
 <h1> Your purchase types</h1>
+<ul class="control-list">
 
-<a href="/tags/new_tag"> Add a new type of purchase to your list</a>
-<br></br>
-<a href= "/tags/all_tags"> See all your type of purchases</a>
-<br></br>
-<a href= "/tags/spent_by_tag"> See how much you spent for type of purchases</a>
-<br></br>
+<li><a href="/tags/new_tag"> Add a new type of purchase to your list</a></li>
+
+<li><a href= "/tags/all_tags"> See all your type of purchases</a></li>
+
+<li><a href= "/tags/spent_by_tag"> See how much you spent for type of purchases</a></li>
+</ul>
