--- a/views/tags/new_tag.erb
+++ b/views/tags/new_tag.erb
@@ -9,6 +9,6 @@
 <br></br>
 
 
-        <input type="submit" value="Create your purchase type"/>
+        <input class="bttn_positive" type="submit" value="Create your purchase type"/>
 
 </form>
