--- a/views/tags/tag_edit_form.erb
+++ b/views/tags/tag_edit_form.erb
@@ -8,6 +8,6 @@
 
 
 <br></br>
-        <input type="submit" value="Update your purchase type"/>
+        <input class="bttn_positive" type="submit" value="Update your purchase type"/>
 
 </form>
