--- a/views/transactions/index_transactions.erb
+++ b/views/transactions/index_transactions.erb
@@ -1,8 +1,7 @@
 <h1> Your transactions</h1>
 
-<a href="/transactions/new"> Add a new transaction </a>
-<br></br>
-<a href= "/transactions/all_transactions"> See all your transactions </a>
-<br></br>
-<a href= "/transactions/spendings_by_month"> See how much you've spent by month </a>
-<br></br>
+<ul class="control-list">
+  <li><a href="/transactions/new"> Add a new transaction </a></li>
+  <li><a href= "/transactions/all_transactions"> See all your transactions </a></li>
+  <li><a href= "/transactions/spendings_by_month"> See how much you've spent by month </a></li>
+</ul>
