--- a/views/transactions/spendings_by_month.erb
+++ b/views/transactions/spendings_by_month.erb
@@ -14,6 +14,6 @@
 
 
 <br></br>
-        <input type="submit" value="Search  for your transactions"/>
+        <input class="bttn_positive" type="submit" value="Search  for your transactions"/>
 
 </form>
