--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,100 @@
+@import url('https://fonts.googleapis.com/css?family=Merriweather|Oswald');
+
 html {
   background-color: #d8fff8;
+
+}
+
+
+.flex-container   {
+  display: -webkit-flex;
+  display: flex;
+  flex-direction: row;
+  position:relative;
+
+
+}
+
+.flex-item {
+
+  display: flex;
+  flex-direction:row;
+  width: 100%;
+  justify-content: space-around;
+}
+ li {
+   list-style-type: none;
+   font-family: 'Oswald' arial sans-serif;
+
+ }
+
+.flex-container a {
+   background-color: #e1e1e1;
+   text-decoration: none;
+   font-size: 18px;
+   border: 2px solid white;
+   border-radius: 20px;
+   padding:5px 10px;
+ }
+
+#main_title {
+
+  font-family:'Merriweather' arial sans-serif;
+  font-size: 48px;
+  text-align:center;
+  padding: 10px 0px;
+  color:#f28f43;
+}
+
+input {
+  background-color: white;
+  text-decoration: none;
+  font-size: 16px;
+  border: 2px solid Silver;
+  border-radius: 20px;
+  padding:5px 10px;
+  font-family: 'Oswald' arial sans-serif;
+}
+
+a  {
+  background-color: #e1e1e4;
+  text-decoration: none;
+  font-size: 20px;
+  border: 2px solid Silver;
+  border-radius: 20px;
+  padding:5px 10px;
+  /*margin: 10px 10px 2px 10px;*/
+  font-family: 'Oswald' arial sans-serif;
+}
+
+#budget_bttn{
+  background-color: #e1e1e4;
+  text-decoration: none;
+  font-size: 30px;
+  border: 2px solid Silver;
+  border-radius: 20px;
+  padding:5px 10px;
+  font-family: 'Oswald' arial sans-serif;
+}
+
+.bttn_positive {
+  background-color: green;
+  text-decoration: none;
+  font-size: 16px;
+  color: white;
+  border: 2px solid Silver;
+  border-radius: 20px;
+  padding:5px 10px;
+  font-family: 'Oswald' arial sans-serif;
+}
+
+.control-list {
+  padding: 0;
+}
+.control-list li{
+  margin: 0 0 40px 0;
+}
+.control-list li a:hover{
+  background-color: #000;
+  color: #fff;
 }
