--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,18 +7,18 @@
 </head>
 <body>
 
-  <nav>
-    <ul>
-      <li>
+  <nav class="flex-container" >
+    <ul class = "flex-item">
+      <li >
         <a href="/"> Homepage</a>
       </li>
-      <li>
+      <li >
         <a href="/transactions">Transactions</a>
       </li>
-      <li>
+      <li >
         <a href="/tags"> Purchases</a>
       </li>
-      <li>
+      <li >
         <a href="/merchants"> Merchants</a>
       </li>
 
