--- a/views/merchants/index_merchants.erb
+++ b/views/merchants/index_merchants.erb
@@ -1,8 +1,9 @@
 <h1> Your merchants</h1>
 
-<a href="/merchants/new_merchant"> Add a new merchant to your list</a>
-<br></br>
-<a href= "/merchants/all_merchants"> See all your merchants</a>
-<br></br>
-<a href= "/merchants/spent_by_merchant"> See how much you spent by merchant</a>
-<br></br>
+<ul class="control-list">
+<li><a href="/merchants/new_merchant"> Add a new merchant to your list</a></li>
+
+<li><a href= "/merchants/all_merchants"> See all your merchants</a></li>
+
+<li><a href= "/merchants/spent_by_merchant"> See how much you spent by merchant</a></li>
+</ul>
