--- a/views/transactions/new_transaction.erb
+++ b/views/transactions/new_transaction.erb
@@ -31,7 +31,7 @@
 
 <br></br>
 
-    <!-- <label> Select the budget </label> -->
+
     <select  hidden name ="budget_id" >
       <% for budget in @budgets %>
     <option value=" <%= budget.id %>"> <%= budget.budget%> </option>
@@ -39,6 +39,6 @@
     </select>
 
 <br></br>
-        <input type="submit" value="Record your transaction"/>
+        <input  class="bttn_positive" type="submit" value="Record your transaction"/>
 
 </form>
