--- a/views/transactions/transaction_edit_form.erb
+++ b/views/transactions/transaction_edit_form.erb
@@ -30,7 +30,7 @@
     </select>
 
 <br></br>
-   <!-- <label> Select budget </label> -->
+
    <select hidden name ="budget_id" >
       <% for budget in @budgets %>
    <option <%= "selected" if budget.id == @transaction.budget_id%> value=" <%= budget.id %>"> <%= budget.budget%> </option>
@@ -38,6 +38,6 @@
     </select>
 
 <br></br>
-        <input type="submit" value="Update your transaction"/>
+        <input class="bttn_positive" type="submit" value="Update your transaction"/>
 
 </form>
