css delete and edit buttons

--- a/views/merchants/all_merchants.erb
+++ b/views/merchants/all_merchants.erb
@@ -13,10 +13,10 @@
 <br></br>
 
 <form method="post" action = "/merchants/<%= merchant.id%>/delete_merchant">
-<input type="submit"  value="Delete this merchant"/>
+<input class = "bttn_delete" type="submit"  value="Delete this merchant"/>
 </form>
 <form method="get" action ="/merchants/<%= merchant.id %>/merchant_edit_form">
-<input type="submit"  value="Update  merchant"/>
+<input class = "bttn_edit" type="submit"  value="Update  merchant"/>
 </form>
     <% end %>
 
