--- a/public/style.css
+++ b/public/style.css
@@ -98,3 +98,26 @@ a  {
   background-color: #000;
   color: #fff;
 }
+
+.bttn_edit {
+  background-color: #f9f175;
+  text-decoration: none;
+  font-size: 16px;
+  color: black;
+  border: 2px solid #8e8e87;
+  border-radius: 20px;
+  padding:10px 10px 10px 10px;
+  font-family: 'Oswald' arial sans-serif;
+
+}
+.bttn_delete{
+  background-color: red;
+  text-decoration: none;
+  font-size: 16px;
+  color: white;
+  border: 2px solid #8e8e87;
+  border-radius: 20px;
+  padding:10px 10px 10px 10px;
+  font-family: 'Oswald' arial sans-serif;
+
+}
