--- a/views/tags/all_tags.erb
+++ b/views/tags/all_tags.erb
@@ -13,10 +13,10 @@
 <br></br>
 
 <form method="post" action = "/tags/<%= tag.id%>/delete_tag">
-<input type="submit"  value="Delete this type of purchase"/>
+<input  class = "bttn_delete" type="submit"  value="Delete this type of purchase"/>
 </form>
 <form method="get" action ="/tags/<%= tag.id %>/tag_edit_form">
-<input type="submit"  value="Change this type of purchase"/>
+<input class = "bttn_edit" type="submit"  value="Change this type of purchase"/>
 </form>
     <% end %>
 
