--- a/views/transactions/all_transactions.erb
+++ b/views/transactions/all_transactions.erb
@@ -18,10 +18,10 @@
 
 <br></br>
 <form method="post" action = "/transactions/<%= transaction.id%>/delete_transaction">
-<input type="submit"  value="Delete this transaction"/>
+<input class = "bttn_delete" type="submit"  value="Delete this transaction"/>
 </form>
 <form method="get" action ="/transactions/<%= transaction.id %>/transaction_edit_form">
-<input type="submit"  value="Change  this transaction"/>
+<input class = "bttn_edit" type="submit"  value="Change  this transaction"/>
 </form>
     <% end %>
 
