--- a/views/merchants/all_merchants.erb
+++ b/views/merchants/all_merchants.erb
@@ -1,5 +1,5 @@
-<p class="new_bttn">
-  <a href="/merchants/new_merchant"> Create a new merchant </a>
+<p>
+  <a  class="bttn_positive" href="/merchants/new_merchant"> Create a new merchant </a>
 </p>
 
 <br></br>
