--- a/public/style.css
+++ b/public/style.css
@@ -22,20 +22,20 @@ html {
   width: 100%;
   justify-content: space-around;
 }
- li {
-   list-style-type: none;
-   font-family: 'Oswald' arial sans-serif;
+li {
+  list-style-type: none;
+  font-family: 'Oswald' arial sans-serif;
 
- }
+}
 
 .flex-container a {
-   background-color: #e1e1e1;
-   text-decoration: none;
-   font-size: 18px;
-   border: 2px solid white;
-   border-radius: 20px;
-   padding:5px 10px;
- }
+  background-color: #e1e1e1;
+  text-decoration: none;
+  font-size: 18px;
+  border: 2px solid white;
+  border-radius: 20px;
+  padding:5px 10px;
+}
 
 #main_title {
 
@@ -46,7 +46,7 @@ html {
   color:#f28f43;
 }
 
-input {
+/*input {
   background-color: white;
   text-decoration: none;
   font-size: 16px;
@@ -54,7 +54,7 @@ input {
   border-radius: 20px;
   padding:5px 10px;
   font-family: 'Oswald' arial sans-serif;
-}
+}*/
 
 a  {
   background-color: #e1e1e4;
@@ -63,7 +63,6 @@ a  {
   border: 2px solid Silver;
   border-radius: 20px;
   padding:5px 10px;
-  /*margin: 10px 10px 2px 10px;*/
   font-family: 'Oswald' arial sans-serif;
 }
 
@@ -102,22 +101,29 @@ a  {
 .bttn_edit {
   background-color: #f9f175;
   text-decoration: none;
-  font-size: 16px;
+  font-size: 14px;
   color: black;
-  border: 2px solid #8e8e87;
+  border: 1px solid #8e8e87;
   border-radius: 20px;
-  padding:10px 10px 10px 10px;
+  padding:0px 5px 5px 5px;
   font-family: 'Oswald' arial sans-serif;
 
 }
 .bttn_delete{
   background-color: red;
   text-decoration: none;
-  font-size: 16px;
+  font-size: 14px;
+  text-align: center;
   color: white;
-  border: 2px solid #8e8e87;
+  border: 1px solid #8e8e87;
   border-radius: 20px;
-  padding:10px 10px 10px 10px;
+  padding:0px 5px 5px 5px;
   font-family: 'Oswald' arial sans-serif;
+
+}
+
+form {
+  margin-top: 10px;
+  padding:0px 10px 2px 10px;
 
 }
