--- a/views/transactions/all_transactions.erb
+++ b/views/transactions/all_transactions.erb
@@ -1,7 +1,7 @@
 <h1> These are all your transactions</h1>
 
-<p class="new_bttn">
-  <a href="/transactions/new"> Create a new transaction </a>
+<p >
+  <a  class="bttn_positive" href="/transactions/new"> Create a new transaction </a>
 </p>
 
 <br></br>
@@ -14,9 +14,7 @@
     <li> Date of transaction: <%= transaction.date_of_transaction() %> </li>
     <li> Merchant: <%= transaction.merchant() %> </li>
     <li> Type of purchase: <%= transaction.tag() %> </li>
-    <!-- <li> budget: <%= transaction.budget_id() %> </li> -->
 
-<br></br>
 <form method="post" action = "/transactions/<%= transaction.id%>/delete_transaction">
 <input class = "bttn_delete" type="submit"  value="Delete this transaction"/>
 </form>
