--- a/public/style.css
+++ b/public/style.css
@@ -46,15 +46,28 @@ li {
   color:#f28f43;
 }
 
-/*input {
-  background-color: white;
-  text-decoration: none;
-  font-size: 16px;
-  border: 2px solid Silver;
-  border-radius: 20px;
-  padding:5px 10px;
+h1 {
   font-family: 'Oswald' arial sans-serif;
-}*/
+  font-size: 36px;
+  text-align: center;
+
+}
+
+#display_paragraph{
+
+  font-family: 'Oswald' arial sans-serif;
+  font-size: 26px;
+  text-align: center;
+  margin:0px;
+
+}
+
+#display {
+  border:2px solid gold;
+  border-radius: 20px;
+  padding:0px;
+  margin:15px;
+}
 
 a  {
   background-color: #e1e1e4;
@@ -126,4 +139,30 @@ form {
   margin-top: 10px;
   padding:0px 10px 2px 10px;
 
+}
+
+h3 {
+  font-family: 'Oswald' arial sans-serif;
+  font-size: 26px;
+  text-align: center;
+}
+
+h2 {
+  font-family: 'Oswald' arial sans-serif;
+  font-size: 36px;
+  text-align: center;
+}
+
+#warning2 {
+  font-family: 'Oswald' arial sans-serif;
+  font-size: 36px;
+  text-align: center;
+  color: #c47105;
+}
+
+#warning1 {
+  font-family: 'Oswald' arial sans-serif;
+  font-size: 36px;
+  text-align: center;
+  color: red;
 }
