--- a/views/index.erb
+++ b/views/index.erb
@@ -14,11 +14,11 @@
 <section id="warning">
   <% if  @amount_left < 0 %>
   <p id="warning1"> Your are over  your budget</p>
-  <p id="very_bad1"> You  should seek financial advice </p>
-  <p id="very_bad2"> Contact Antonio Eusebio de Abreu Goncalves for personalized loans </p>
+  <p id="warning1"> You  should seek financial advice </p>
+  <p id="warning1"> Contact Antonio Eusebio de Abreu Goncalves for personalized loans </p>
   <% elsif  @amount_left < (0.2 * @budget)%>
-<p id="bad"> Your expenses are too high</p>
-<p id="bad1"> You now have less than 20% of this month budget</p>
+<p id="warning2"> Your expenses are too high</p>
+<p id="warning2"> You now have less than 20% of this month budget</p>
 
 <% end %>
 </section>
